[gd_scene load_steps=3 format=3 uid="uid://bjql6dlrtm3ls"]

[ext_resource type="Script" path="res://planetgenerationexperiment.gd" id="1_bb8g7"]

[sub_resource type="ImageTexture" id="ImageTexture_pw6a8"]

[node name="PlanetGenerationExperiment" type="Node2D"]
script = ExtResource("1_bb8g7")

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = 25.0
offset_top = 91.0
offset_right = 745.0
offset_bottom = 327.0
texture = SubResource("ImageTexture_pw6a8")

[node name="TextureRect2" type="TextureRect" parent="."]
offset_left = 13.0
offset_top = 460.0
offset_right = 733.0
offset_bottom = 696.0
texture = SubResource("ImageTexture_pw6a8")

[node name="TextureRect3" type="TextureRect" parent="."]
offset_left = 748.0
offset_top = 435.0
offset_right = 948.0
offset_bottom = 635.0
texture = SubResource("ImageTexture_pw6a8")

[node name="TextureRect4" type="TextureRect" parent="."]
offset_left = 959.0
offset_top = 427.0
offset_right = 1159.0
offset_bottom = 627.0
texture = SubResource("ImageTexture_pw6a8")

[node name="Button" type="Button" parent="."]
offset_left = 1027.0
offset_top = 72.0
offset_right = 1126.0
offset_bottom = 114.0
text = "Generate!"

[node name="OptionButton" type="OptionButton" parent="."]
offset_left = 14.0
offset_top = 19.0
offset_right = 584.0
offset_bottom = 62.0
item_count = 11
selected = 4
popup/item_0/text = "1. Medium size, internally hot, unstable surface, no atmosphere."
popup/item_0/id = 0
popup/item_1/text = "2. Small, solid, dusty, craterized, no atmosphere."
popup/item_1/id = 1
popup/item_2/text = "3. Medium size, solid, thick atmosphere, fully covered by clouds."
popup/item_2/id = 2
popup/item_3/text = "4. Medium size, felisian, breathable atmosphere, suitable for life."
popup/item_3/id = 3
popup/item_4/text = "5. Medium size, rocky, creased, no atmosphere."
popup/item_4/id = 4
popup/item_5/text = "6. Small, solid, thin atmosphere."
popup/item_5/id = 5
popup/item_6/text = "7. Large, not consistent, covered with dense clouds."
popup/item_6/id = 6
popup/item_7/text = "8. Small, solid, icy surface, no atmosphere."
popup/item_7/id = 7
popup/item_8/text = "9. Medium size, surface is mainly native quartz, oxygen atmosphere."
popup/item_8/id = 8
popup/item_9/text = "10. Very large, substellar object, not consistent."
popup/item_9/id = 9
popup/item_10/text = "11. Companion star - not a planet. "
popup/item_10/id = 10

[node name="PlanetIndex" type="TextEdit" parent="."]
offset_left = 1032.0
offset_top = 20.0
offset_right = 1124.0
offset_bottom = 61.0
text = "0"
placeholder_text = "planet index"

[node name="SeedInput" type="TextEdit" parent="."]
offset_left = 596.0
offset_top = 20.0
offset_right = 1023.0
offset_bottom = 61.0
text = "607248.30769023"
placeholder_text = "seed - set this to generate based on predefined seed"

[node name="Feltyrion" type="Feltyrion" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="LandingPtLon" type="HSlider" parent="."]
offset_left = 31.0
offset_top = 332.0
offset_right = 739.0
offset_bottom = 352.0
max_value = 359.0
value = 1.0
rounded = true

[node name="LandingPtLat" type="VSlider" parent="."]
offset_left = 724.0
offset_top = 93.0
offset_right = 788.0
offset_bottom = 337.0
min_value = 1.0
max_value = 119.0
value = 1.0
rounded = true
